Prepocessed the dataset

--- a/dataset/.gitignore
+++ b/dataset/.gitignore
@@ -1,2 +1,18 @@
-raw/*
 cleaned/*
+raws/*
+!*/*_binder_*
+!*/*_darkworld_barghest2_*
+!*/*_darkworld_falsepath_*
+!*/*_darkworld_lossdream_*
+!*/*_darkworld_portals_*
+!*/*_darkworld_windream_*
+!*/*_death_barghest_*
+!*/*_forest_*
+!*/*_global_bedhead_*
+!*/*_home_*
+!*/*_menu_*
+!*/*_muspelheim_*
+!*/*_niflheim_*
+!*/*_office_breakroom103_*
+!*/*_office_corridor103_*
+!*/*_thanks_*
