--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 __pycache__
 .mypy_cache/
-models/*
 checkpoint/*
-samples/*
 dist-newstyle
-bin
-!models/124M
-!models/355M
-!models/oscar
-!models/oscar2
-!checkpoint/run1
-!samples/run1
-!samples/run2
+bin/
 *.data-00000-of-00001
 *chatlog*.txt
 irc_log.txt
